# inf325-artifacts

./: README.md  games.csv  games_1.csv  games_consolidation.csv  games_renan.csv  games_victor.csv  prod_price  products_insert.sql  pyproject.toml
final_project/: games_csv.py  insert_orders.py  insert_products.py  insert_users.py  models.py  steam_api.py
