[tool.poetry]
name = "final-project"
version = "0.1.0"
description = ""
authors = ["Caio Teixeira <caio.xd63@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
isort = "^5.13.2"
black = "^24.8.0"
faker = "^28.4.1"
pydantic = "^2.9.2"
sqlmodel = "^0.0.22"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
